repl logs again