@@ -31,5 +31,9 @@
                  [nz.ac.waikato.cms.weka/weka-stable "3.6.13"]]
   :profiles {:appassem {:aot :all}
              :dev
-             {:dependencies [[nz.ac.waikato.cms.weka/weka-stable "3.6.13" :classifier "sources"]
+             {:jvm-opts
+              ["-Dlog4j.configurationFile=test-resources/log4j2.xml" "-Xms4g" "-Xmx12g" "-XX:+UseConcMarkSweepGC"]
+              :dependencies [[nz.ac.waikato.cms.weka/weka-stable "3.6.13" :classifier "sources"]
+                             [org.apache.logging.log4j/log4j-core "2.7"]
+                             [org.apache.logging.log4j/log4j-slf4j-impl "2.7"]
                              [com.zensols/clj-append "1.0.5"]]}})
